--- a/src/FruitArrayList.form
+++ b/src/FruitArrayList.form
@@ -81,6 +81,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="REMOVE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnremoveActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
