--- a/src/Sorting.form
+++ b/src/Sorting.form
@@ -38,11 +38,12 @@
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel1" min="-2" pref="114" max="-2" attributes="0"/>
-                  <Component id="btninsertion" min="-2" max="-2" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                       <Component id="btnbubble" alignment="0" max="32767" attributes="0"/>
                       <Component id="btnselection" alignment="0" max="32767" attributes="0"/>
                   </Group>
+                  <Component id="btninsertion" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnquick" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
           </Group>
@@ -62,10 +63,13 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btnbubble" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btnselection" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btninsertion" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="btnquick" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
@@ -125,6 +129,11 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="text" type="java.lang.String" value="Sorting Methods"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnquick">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Quick Sort"/>
       </Properties>
     </Component>
   </SubComponents>
